common_odin/api_os.odin

@(default_calling_convention="c")
foreign {
	OS_Init :: proc "c"(systems: i32) ---;
	OS_InitConsoleApp :: proc "c"() ---;
	OS_InitGraphicsApp :: proc "c"() ---;
	OS_Sleep :: proc "c"(ms: u64) ---;
	OS_SleepPrecise :: proc "c"(ns: u64) ---;
	OS_MessageBox :: proc "c"(title: string, message: string) ---;
	OS_ScratchArena :: proc "c"(conflict: [^]^Arena, conflict_count: int) -> ^Arena ---;
	OS_PosixTime :: proc "c"() -> u64 ---;
	OS_Tick :: proc "c"() -> u64 ---;
	OS_TickRate :: proc "c"() -> u64 ---;
	OS_TimeInSeconds :: proc "c"() -> f64 ---;
	OS_LogOut :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) ---;
	OS_LogErr :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) ---;
	OS_ExitWithErrorMessage :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) ---;
	OS_DebugMessageBox :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) ---;
	OS_DebugLog :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) ---;
	OS_DebugLogPrintfFormat :: proc "c"(fmt: cstring, #c_vararg varargs: ..any) -> i32 ---;
	OS_GetSystemCapabilities :: proc "c"() -> OS_Capabilities ---;
	OS_GetSystemTime :: proc "c"() -> OS_SystemTime ---;
	OS_StartAudioProc :: proc "c"(device_id: u32, proc_: ^OS_AudioProc, user_data: rawptr, out_err: ^OS_Error) -> bool ---;
	OS_StopAudioProc :: proc "c"(out_err: ^OS_Error) -> bool ---;
	OS_RetrieveAudioDevices :: proc "c"() -> OS_RetrieveAudioDevicesResult ---;
	OS_CreateThread :: proc "c"(#by_ptr desc: OS_ThreadDesc) -> OS_Thread ---;
	OS_CheckThread :: proc "c"(thread: OS_Thread) -> bool ---;
	OS_JoinThread :: proc "c"(thread: OS_Thread) -> i32 ---;
	OS_DestroyThread :: proc "c"(thread: OS_Thread) ---;
	OS_CreateWindow :: proc "c"(#by_ptr desc: OS_WindowDesc) -> OS_Window ---;
	OS_DestroyWindow :: proc "c"(window: OS_Window) ---;
	OS_GetWindowUserSize :: proc "c"(window: OS_Window, out_width: ^i32, out_height: ^i32) ---;
	OS_SetWindowMouseLock :: proc "c"(window: OS_Window, kind: OS_MouseLockKind) ---;
	OS_GetWindowMouseState :: proc "c"(window: OS_Window) -> OS_MouseState ---;
	OS_PollEvents :: proc "c"(wait: bool, output_arena: ^Arena, out_event_count: ^int) -> ^OS_Event ---;
	OS_PollGamepadStates :: proc "c"(states: ^OS_GamepadStates, accumulate: bool) ---;
	OS_PollKeyboardState :: proc "c"(state: ^OS_KeyboardState, accumulate: bool) ---;
	OS_PollMouseState :: proc "c"(state: ^OS_MouseState, accumulate: bool, optional_window: OS_Window) ---;
	OS_SetGamepadMappings :: proc "c"(#by_ptr mappings: OS_GamepadMapping, mapping_count: int) ---;
	OS_HeapAlloc :: proc "c"(size: uint) -> rawptr ---;
	OS_HeapRealloc :: proc "c"(ptr: rawptr, size: uint) -> rawptr ---;
	OS_HeapFree :: proc "c"(ptr: rawptr) ---;
	OS_VirtualAlloc :: proc "c"(address: rawptr, size: uint, flags: u32) -> rawptr ---;
	OS_VirtualCommit :: proc "c"(address: rawptr, size: uint) -> bool ---;
	OS_VirtualProtect :: proc "c"(address: rawptr, size: uint, flags: u32) -> bool ---;
	OS_VirtualFree :: proc "c"(address: rawptr, size: uint) -> bool ---;
	OS_ArenaCommitMemoryProc :: proc "c"(arena: ^Arena, needed_size: uint) -> bool ---;
	OS_VirtualAllocArena :: proc "c"(total_reserved_size: uint) -> Arena ---;
	OS_ReadEntireFile :: proc "c"(path: string, output_arena: ^Arena, out_data: ^rawptr, out_size: ^uint, out_err: ^OS_Error) -> bool ---;
	OS_WriteEntireFile :: proc "c"(path: string, data: rawptr, size: uint, out_err: ^OS_Error) -> bool ---;
	OS_GetFileInfoFromPath :: proc "c"(path: string, out_err: ^OS_Error) -> OS_FileInfo ---;
	OS_CopyFile :: proc "c"(from: string, to: string, out_err: ^OS_Error) -> bool ---;
	OS_DeleteFile :: proc "c"(path: string, out_err: ^OS_Error) -> bool ---;
	OS_MakeDirectory :: proc "c"(path: string, out_err: ^OS_Error) -> bool ---;
	OS_LoadLibrary :: proc "c"(name: string, out_err: ^OS_Error) -> OS_Library ---;
	OS_LoadSymbol :: proc "c"(library: OS_Library, symbol_name: cstring) -> rawptr ---;
	OS_UnloadLibrary :: proc "c"(library: OS_Library) ---;
	OS_OpenFile :: proc "c"(path: string, flags: OS_OpenFileFlags, out_err: ^OS_Error) -> OS_File ---;
	OS_GetFileInfo :: proc "c"(file: OS_File, out_err: ^OS_Error) -> OS_FileInfo ---;
	OS_WriteFile :: proc "c"(file: OS_File, size: int, buffer: rawptr, out_err: ^OS_Error) -> int ---;
	OS_ReadFile :: proc "c"(file: OS_File, size: int, buffer: rawptr, out_err: ^OS_Error) -> int ---;
	OS_TellFile :: proc "c"(file: OS_File, out_err: ^OS_Error) -> i64 ---;
	OS_SeekFile :: proc "c"(file: OS_File, offset: i64, relative: bool, out_err: ^OS_Error) ---;
	OS_WriteFileAt :: proc "c"(file: OS_File, offset: i64, size: int, buffer: rawptr, out_err: ^OS_Error) -> int ---;
	OS_ReadFileAt :: proc "c"(file: OS_File, offset: i64, size: int, buffer: rawptr, out_err: ^OS_Error) -> int ---;
	OS_CloseFile :: proc "c"(file: OS_File) ---;
	OS_GetStdout :: proc "c"() -> OS_File ---;
	OS_GetStdin :: proc "c"() -> OS_File ---;
	OS_GetStderr :: proc "c"() -> OS_File ---;
	OS_CreatePipe :: proc "c"(inheritable: bool, out_err: ^OS_Error) -> OS_File ---;
	OS_IsFilePipe :: proc "c"(file: OS_File) -> bool ---;
	OS_MapFileForReading :: proc "c"(file: OS_File, out_buffer: ^rawptr, out_size: ^uint, out_err: ^OS_Error) -> OS_FileMapping ---;
	OS_UnmapFile :: proc "c"(mapping: OS_FileMapping) ---;
	OS_Exec :: proc "c"(cmd: string, out_err: ^OS_Error) -> i32 ---;
	OS_ExecAsync :: proc "c"(cmd: string, #by_ptr child_desc: OS_ChildProcessDesc, out_err: ^OS_Error) -> OS_ChildProcess ---;
	OS_CreateChildProcess :: proc "c"(executable: string, args: string, #by_ptr child_desc: OS_ChildProcessDesc, out_err: ^OS_Error) -> OS_ChildProcess ---;
	OS_WaitChildProcess :: proc "c"(child: OS_ChildProcess, out_err: ^OS_Error) ---;
	OS_GetReturnCodeChildProcess :: proc "c"(child: OS_ChildProcess, out_code: ^i32, out_err: ^OS_Error) -> bool ---;
	OS_KillChildProcess :: proc "c"(child: OS_ChildProcess, out_err: ^OS_Error) ---;
	OS_DestroyChildProcess :: proc "c"(child: OS_ChildProcess) ---;
	OS_InitRWLock :: proc "c"(lock: ^OS_RWLock) ---;
	OS_LockShared :: proc "c"(lock: ^OS_RWLock) ---;
	OS_LockExclusive :: proc "c"(lock: ^OS_RWLock) ---;
	OS_TryLockShared :: proc "c"(lock: ^OS_RWLock) -> bool ---;
	OS_TryLockExclusive :: proc "c"(lock: ^OS_RWLock) -> bool ---;
	OS_UnlockShared :: proc "c"(lock: ^OS_RWLock) ---;
	OS_UnlockExclusive :: proc "c"(lock: ^OS_RWLock) ---;
	OS_DeinitRWLock :: proc "c"(lock: ^OS_RWLock) ---;
	OS_InitSemaphore :: proc "c"(sem: ^OS_Semaphore, max_count: i32) ---;
	OS_WaitForSemaphore :: proc "c"(sem: ^OS_Semaphore) -> bool ---;
	OS_SignalSemaphore :: proc "c"(sem: ^OS_Semaphore, count: i32) ---;
	OS_DeinitSemaphore :: proc "c"(sem: ^OS_Semaphore) ---;
	OS_InitConditionVariable :: proc "c"(var: ^OS_ConditionVariable) ---;
	OS_WaitConditionVariable :: proc "c"(var: ^OS_ConditionVariable, lock: ^OS_RWLock, is_lock_shared: bool, ms: i32) -> bool ---;
	OS_SignalConditionVariable :: proc "c"(var: ^OS_ConditionVariable) ---;
	OS_SignalAllConditionVariable :: proc "c"(var: ^OS_ConditionVariable) ---;
	OS_DeinitConditionVariable :: proc "c"(var: ^OS_ConditionVariable) ---;
}
